--- a/.htaccess
+++ b/.htaccess
@@ -29,3 +29,6 @@ RewriteRule ^user/delete/([0-9]+)$   api/RestController.php?resource=user&page_k
 
 RewriteRule ^user/update/([0-9]+)/$   api/RestController.php?resource=user&page_key=update&user_id=$1 [nc,qsa]
 RewriteRule ^user/update/([0-9]+)$   api/RestController.php?resource=user&page_key=update&user_id=$1 [nc,qsa]
+
+
+#video-------------------------------------------------------------------------------------------------
